# claude-rlm

./: .gitignore  BEST_PRACTICES.md  CLAUDE.md  LICENSE  README.md  STANDALONE_PROMPT.md  agent_sdk_bridge.py  claude_rlm.py  demo.py  examples.py  pyproject.toml  test_rlm.py
domains/: __init__.py  academic.py  base.py  compliance.py  finance.py  insurance.py  legal.py  medical.py  real_estate.py
examples/: basic.py  batch.py  custom_middleware.py  multi_document.py
src/claude_rlm/: __init__.py  _compat.py  constants.py  models.py
src/claude_rlm/api/: __init__.py  client.py  cost_tracker.py
src/claude_rlm/document/: __init__.py  ingestors.py  registry.py
src/claude_rlm/domains/: router.py
src/claude_rlm/engine/: __init__.py  code_extractor.py  ipc.py  sandbox.py
src/claude_rlm/interfaces/: __init__.py  cli.py  patterns.py
src/claude_rlm/orchestrator/: __init__.py  middleware.py  query_loop.py  result_parser.py
tests/: conftest.py  test_api_client.py  test_compat.py  test_documents.py  test_domains.py  test_engine.py  test_integration.py  test_models.py  test_orchestrator.py
