[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "claude-rlm"
version = "0.1.0"
description = "Recursive Language Model for document analysis — treats documents as environments, not context"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Na Jung" },
]
keywords = [
    "llm", "document-analysis", "rlm", "recursive-language-model",
    "claude", "anthropic", "finance", "legal", "medical", "academic",
    "synonym-resolution", "structured-extraction",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
pdf = ["pdfplumber>=0.10.0"]
docx = ["python-docx>=1.0.0"]
all = ["pdfplumber>=0.10.0", "python-docx>=1.0.0"]
dev = ["pytest>=7.0", "ruff>=0.4.0"]

[project.urls]
Homepage = "https://github.com/njlee1/claude-rlm"
Documentation = "https://github.com/njlee1/claude-rlm#readme"
Repository = "https://github.com/njlee1/claude-rlm"
Issues = "https://github.com/njlee1/claude-rlm/issues"

[project.scripts]
claude-rlm = "agent_sdk_bridge:main"

[tool.setuptools.packages.find]
include = ["claude_rlm*", "domains*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
